# Palgo

./: CMakeLists.txt  README.md
include/palgo/: kdtree.hpp  static_kdtree.hpp
include/palgo/impl/: CyclicIterator.hpp
test/: CyclicIterator_test.cpp  common.cpp  common.h  fixed_kdtree_test.cpp  speed_test.cpp  static_kdtree_test.cpp  sycl_test.cpp
